--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,6 +130,8 @@ deploy-dev:
   script:
     - cd helmcharts
     - helm upgrade --install app-dev app-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG --set ingress.app.host=dev.prtest.tech -n dev    
+  when: ["on_success"]
+
 
 health-wagtail-dev:
   stage: healthcheck
@@ -198,6 +200,7 @@ deploy-stage:
   script:
     - cd helmcharts
     - helm upgrade --install app-stage app-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG --set ingress.app.host=stage.prtest.tech -n stage    
+  when: on_success 
 
 deploy-backup:
   stage: deploy
@@ -209,6 +212,7 @@ deploy-backup:
     - if: $CI_COMMIT_TAG
       variables:
         BACKUP_IMAGE_TAG: $CI_COMMIT_TAG
+        
 
 health-wagtail-stage:
   stage: healthcheck
@@ -218,6 +222,7 @@ health-wagtail-stage:
   script:
     - nslookup stage.prtest.tech
     - curl https://stage.prtest.tech
+  needs: ["deploy-stage"] 
 
 roll-back-stage:
   stage: roll-back
@@ -227,7 +232,8 @@ roll-back-stage:
   script:
     - cd helmcharts
     - helm rollback app-stage -n stage
-   
+  needs: ["health-wagtail-stage"] 
+  when: on_failure  
     
 deploy-production:
   stage: deploy-prod  
@@ -247,7 +253,7 @@ health-wagtail-prod:
   rules:    
     - if: $CI_COMMIT_TAG
   script:
-    - nslookup prtest.tech
+    - nslookup bug.prtest.tech
     - curl https://prtest.tech  
   needs: ["deploy-production"] 
 
@@ -259,6 +265,7 @@ roll-back-prod:
   script:
     - cd helmcharts
     - helm rollback app-prod -n prod   
-  needs: ["health-wagtail-prod"]   
+  needs: ["health-wagtail-prod"] 
+  when: on_failure  
 
 
